syntax = "proto3";

package ai.metathings.service.device;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "github.com/nayotta/metathings/pkg/proto/deviced/model.proto";

message RenameObjectRequest {
	ai.metathings.service.deviced.OpObject source = 1 [(validator.field) = {msg_exists: true}];
	ai.metathings.service.deviced.OpObject destination = 2 [(validator.field) = {msg_exists: true}];
}
